--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 
 <body>
+    <h1>Welcome to Blabby</h1>
     <script src="/socket.io/socket.io.js"></script>
     <script>
         let socket = io()
